--------------------------------------------------------------------------------
 OSM2World 0.1.7                                                     2011-??-?? 
--------------------------------------------------------------------------------
 
 * use ele tags on invisible ways and areas
 * artificial nodes in ways for better terrain elevation
 * new Exit action (menu item and shortcut)
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.6                                                     2011-05-16 
--------------------------------------------------------------------------------
 
 * fewer visual artifacts when scenes mix known and unknown ele
 * unconnected WorldObjects influence terrain triangulation
 * new WorldObject: building entrance
 * support for min_height
 * always use JOSM workaround for .osm files with generator='JOSM'
 * use ele tags on ways and areas for elevation calculation
 * show error message box even for unexpected errors
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.5                                                     2011-04-30 
--------------------------------------------------------------------------------
 
 * configurable materials
 * configuration file no longer limited to command line interface
 * zoom with +/- keys
 * support for building:min_level
 * prevent silent InvalidGeometryException crashes during conversions
 
 
--------------------------------------------------------------------------------
 OSM2World 0.1.4                                                     2011-04-20 
--------------------------------------------------------------------------------
 
 * support for dragging files into the viewer
 * addition of some missing library files
 * Mac OS X support in start script
 * alternative ElevationCalculators available for library users 
 
 
--------------------------------------------------------------------------------