@@ -3,6 +3,8 @@ package org.osm2world.viewer.model;
 import java.util.HashSet;
 import java.util.Set;
 
+import org.osm2world.core.map_elevation.creation.ElevationCalculator;
+import org.osm2world.core.map_elevation.creation.ForceElevationCalculator;
 import org.osm2world.core.target.common.rendering.Camera;
 import org.osm2world.core.target.common.rendering.Projection;
 import org.osm2world.viewer.view.debug.DebugView;
@@ -18,6 +20,8 @@ public class RenderOptions {
 	private boolean showTerrain = true;
 	private boolean wireframe = false;
 	private boolean backfaceCulling = true;
+	
+	ElevationCalculator eleCalculator = new ForceElevationCalculator();
 	
 	public boolean isShowGrid() {
 		return showGrid;
@@ -43,6 +47,11 @@ public class RenderOptions {
 	public void setBackfaceCulling(boolean backfaceCulling) {
 		this.backfaceCulling = backfaceCulling;
 	}
-	
+	public ElevationCalculator getEleCalculator() {
+		return eleCalculator;
+	}
+	public void setEleCalculator(ElevationCalculator eleCalculator) {
+		this.eleCalculator = eleCalculator;
+	}
 	
 }
